--- a/templates/about.html
+++ b/templates/about.html
@@ -94,9 +94,20 @@
         .button:active {
             transform: scale(0.95);
         }
+        .back-arrow {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            font-size: 30px;
+            color: #ffffff;
+            cursor: pointer;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
+    <a href="/" class="back-arrow">←</a>
+
     <h1>À propos de l'application</h1>
     <div class="about-container">
         <div class="about-text">
@@ -131,10 +142,6 @@
                 <button class="button" onclick="submitSuggestion()">Envoyer la Suggestion</button>
             </div>
         </div>
-    </div>
-
-    <div class="button-container">
-        <a href="/" class="button">Retour à l'accueil</a>
     </div>
 
     <script>
